fixed z-index so no overlaping and correct things display as you scroll the page

--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -50,4 +50,5 @@ td {
   width: 79.16%;
   top: 0px;
   margin: auto;
+  z-index: 1;
 }
